# fastapi-tdd-docker

./: docker-compose.yml  pyproject.toml
app/: config.py  main.py
project/: Dockerfile  pyproject.toml  requirements.txt
project/app/: config.py  db.py  main.py
project/app/api/: crud.py  summaries.py
project/app/models/: pydantic.py
project/db/: Dockerfile
project/tests/: conftest.py  test_ping.py  test_summaries.py
