[tool.poetry]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.2.2"
fastapi = "0.94.1"
uvicorn = "0.21.1"
asyncpg = "0.27.0"
tortoise-orm = "0.19.3"
aerich = "0.7.1"
httpx = "0.23.3"



[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
